--- a/index.html
+++ b/index.html
@@ -1,118 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>The Bunny Responsive Theme</title>
-		<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Prompt:100,200,300,400,500,700" rel="stylesheet">
-		<link rel="stylesheet" href="css/font-awesome.css">
-		<link rel="stylesheet" href="css/grid.css">
-		<link rel="stylesheet" href="css/main.css">		
-	</head>
-	<body>
+<head>
+	<meta charset="UTF-8">
+	<title>The Bunny Responsive Theme</title>
+	<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Prompt:100,200,300,400,500,700" rel="stylesheet">
+	<link rel="stylesheet" href="css/font-awesome.css">
+	<link rel="stylesheet" href="css/grid.css">
+	<link rel="stylesheet" href="css/main.css">		
+</head>
+<body>
+	<div class="container-fluid">
 		<header>
-			<nav>
-				<div  class="logo">
-					<ul>
-						<li id="blanc">Bunny´s</li>
-						<li id="pink">LOVE</li>
-					</ul>
-				</div>			
-				<div class="bar">
-					<ul>
-						<li><a href="#">BUNNYS</a></li>
-						<li><a href="#">CUTE PHOTOS</a></li>
-						<li><a href="#">RABBIT FASHION</a></li>
-						<li><a href="#">NEWS BUNNY'S</a></li>
-						<li><a href="#">FEATURES</a></li>
-					</ul>
-				</div>			
-			</nav>
+			<div class="container">
+				<div class="row">
+					<div class="col-4">
+						<h1 class="titulo">BUNNYS <span>LOVE</span></h1>
+					</div>
+					<div class="col-8">
+						<nav>
+							<ul>
+								<li>BUNNYS</li>
+								<li>CUTE PHOTOS</li>
+								<li>RABBIT FASHION</li>
+								<li>NEW BUNNYS</li>
+								<li>FEATURES</li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</div>
 		</header>
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-2"></div>
-						<div class="photo-bunny col-8">
-							<div class="box-opacity">
-								<h1>Soft Bunny</h1>
-								<p> Live  -  Love  -  Laugh</p>
-							</div>
-						</div>
-					<div class="col-2"></div>
+	</div>
+	<section>
+		<div class="row">
+		<div class="col-offset-2"></div>
+				<div class="col-8 fondoconejo">
+					<div class="degrade">
+						<p class="titulo2">Soft Bunny</p>
+						<p><em>Love  -   Live   -    Laugh</em></p>
+					</div>
+
+				</div>
+				<div class="col-offset-2"></div>
+			</div>
+		
+	</section>
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-3">
+					<div class="box-text">
+						<img src="img/img-1.jpg" alt="conejo 1">
+						<h4>The Tale of Peter rabbit</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="box-text">
+						<img src="img/img-2.jpg" alt="conejo 2">
+						<h4>The Tale of Peter rabbit</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="box-text">
+						<img src="img/img-3.jpg" alt="conejo 3">
+						<h4>The Tale of Peter rabbit</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="box-text">
+						<img src="img/img-4.jpg" alt="conejo 4">
+						<h4>The Tale of Peter rabbit</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
+					</div>
 				</div>
 			</div>
-		</section>
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-2"></div>
-					<div class="col-2">
-						<div class="box-text">
-							<img src="img/img-1.jpg" alt="">
-							<h4>The Tale of Peter rabbit</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
-						</div>
-					</div>
-					<div class="col-2">
-						<div class="box-text">
-							<img src="img/img-2.jpg" alt="">
-							<h4>The Tale of Peter rabbit</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
-						</div>
-					</div>
-					<div class="col-2">
-						<div class="box-text">
-							<img src="img/img-3.jpg" alt="">
-							<h4>The Tale of Peter rabbit</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
-						</div>
-					</div>
-					<div class="col-2">
-						<div class="box-text">
-							<img src="img/img-4.jpg" alt="">
-							<h4>The Tale of Peter rabbit</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
-						</div>
-					</div>
-					<div class="col-2"></div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-2"></div>
+				<div class="col-4">
+					<img src="">
+					<h4></h4>
+					<p></p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/kt_X0enZRLc" frameborder="0" allowfullscreen></iframe>
 				</div>
-			</div>
-		</section>
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-2"></div>
-					<div class="col-4">
-						<img src="">
-						<h4></h4>
-						<p></p>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/kt_X0enZRLc" frameborder="0" allowfullscreen></iframe>
-					</div>
-					<div class="col-4">
-						<div class="top-box">
+				<div class="col-4">
+					<div class="top-box">
 						<img src="">
 						<h4></h4>
 						<p></p>
 						<p>iconos</p>
-						</div>
-						<div class="bottom-box">
+					</div>
+					<div class="bottom-box">
 						<img src="">
 						<h4></h4>
 						<p></p>
-						</div>
 					</div>
-					<div class="col-2"></div>
 				</div>
+				<div class="col-2"></div>
 			</div>
-		</section>
-		<div class="head-bunny"></div>
-		<footer>
-			<div class="box-footer">
-				<div class="container">
-					<p>All Rights Reserved</p>
-				</div>
+		</div>
+	</section>
+	<div class="head-bunny"></div>
+	<footer>
+		<div class="box-footer">
+			<div class="container">
+				<p>All Rights Reserved</p>
 			</div>
-		</footer>
-	</body>
+		</div>
+	</footer>
+
+</body>
 </html>
