modificamos la section de opacidad y los 4conejos

--- a/index.html
+++ b/index.html
@@ -10,54 +10,52 @@
 	<link rel="stylesheet" href="css/main.css">		
 </head>
 <body>
-	<div class="container-fluid">
-		<header>
-			<div class="container">
-				<div class="row">
-					<div class="col-4">
-						<h1 class="titulo">BUNNYS <span>LOVE</span></h1>
-					</div>
-					<div class="col-8">
-						<nav>
-							<ul>
-								<li>BUNNYS</li>
-								<li>CUTE PHOTOS</li>
-								<li>RABBIT FASHION</li>
-								<li>NEW BUNNYS</li>
-								<li>FEATURES</li>
-							</ul>
-						</nav>
-					</div>
+	<header>
+		<div class="container">
+			<div class="row">
+				<div class="col-4">
+					<h1 class="titulo">BUNNYS <span>LOVE</span></h1>
+					<i class="fa fa-bars icon" aria-hidden="true"></i>
+				</div>
+				<div class="col-8">
+					<nav>
+						<ul>
+							<li>BUNNYS</li>
+							<li>CUTE PHOTOS</li>
+							<li>RABBIT FASHION</li>
+							<li>NEW BUNNYS</li>
+							<li>FEATURES</li>
+						</ul>
+					</nav>
 				</div>
 			</div>
-		</header>
-	</div>
-	<section>
-		<div class="row">
-		<div class="col-offset-2"></div>
-				<div class="col-8 fondoconejo">
-					<div class="degrade">
-						<p class="titulo2">Soft Bunny</p>
-						<p><em>Love  -   Live   -    Laugh</em></p>
-					</div>
+		</div>
+	</header>
 
-				</div>
-				<div class="col-offset-2"></div>
-			</div>
-		
-	</section>
 	<section>
 		<div class="container">
 			<div class="row">
-				<div class="col-3">
-					<div class="box-text">
-						<img src="img/img-1.jpg" alt="conejo 1">
-						<h4>The Tale of Peter rabbit</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
-					</div>
+				<div class="col-12 fondoconejo">
+					<div class="opacidad">
+						<div class="degrade">
+							<p class="titulo2">Soft Bunny</p>
+							<h3><em>Love  -   Live   -    Laugh</em></h3>
+						</div>
+					</div>					
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container fondoblanco">
+			<div class="row">
+				<div class="col-3 box-text">
+					<img src="img/img-1.jpg" alt="conejo 1">
+					<h4>The Tale of Peter rabbit</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
 				</div>
 				<div class="col-3">
-					<div class="box-text">
+					<div class=" box-text">
 						<img src="img/img-2.jpg" alt="conejo 2">
 						<h4>The Tale of Peter rabbit</h4>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
@@ -115,6 +113,5 @@
 			</div>
 		</div>
 	</footer>
-
 </body>
 </html>
