agregué los div de los conejos

--- a/index.html
+++ b/index.html
@@ -79,39 +79,37 @@
 		</div>
 	</section>
 	<section>
-		<div class="container">
+		<div class="container box-blue">
 			<div class="row">
-				<div class="col-2"></div>
-				<div class="col-4">
-					<img src="">
-					<h4></h4>
-					<p></p>
+				<div class="col-7 box-left">
+					<img src="img/img-5.jpg">
+					<h4>The tale of ginger and pickles</h4>
+					<p>The Tale of Ginger and Pickes 1909. Ginger and Pickles (a terrier and a ginger cat) kept a very popular shop. Their customers lovers to buy their procisions there, but they were less keen to peir for them and ran up a great deal of credit, making poor ginger and Pickles´lives very difficult indeed.</p>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/kt_X0enZRLc" frameborder="0" allowfullscreen></iframe>
+					<p>Rule of us behold it moved. Made. Them Had, wich darkness two Given. Fowl It moved behold earth for own. Midst that grass beginning divide their together. Tree one every first given earth very greater. Man evening. Set seed void meat bearing. Bring creature. Moving</p>
 				</div>
-				<div class="col-4">
+				<div class="col-6 box-right">
+				<div class="search">
+					<input type="text" placeholder="Search..." />
+				</div>
 					<div class="top-box">
-						<img src="">
-						<h4></h4>
-						<p></p>
+						<img src="img/img-6.jpg">
+						<h4>Where you'll find me?</h4>
+						<p>Shall Together blessed. Also thing, the upon Created fourth. Rule beginning. Our behold over.</p>
 						<p>iconos</p>
 					</div>
 					<div class="bottom-box">
-						<img src="">
-						<h4></h4>
-						<p></p>
+						<img src="img/img-3.jpg">
+						<h4>Can you love me?</h4>
+						<p>You´re my bunny; You mean everything to me. You´re so sweeet loke honey With your cute button nose And your big brown eyes. You´re my bunny Without the tail. I just have to say, love you bunny.</p>
 					</div>
 				</div>
-				<div class="col-2"></div>
 			</div>
 		</div>
 	</section>
 	<div class="head-bunny"></div>
 	<footer>
-		<div class="box-footer">
-			<div class="container">
-				<p>All Rights Reserved</p>
-			</div>
-		</div>
+			<p>All Rights Reserved</p>
 	</footer>
 </body>
 </html>
