--- a/index.html
+++ b/index.html
@@ -1,118 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>The Bunny Responsive Theme</title>
-		<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Prompt:100,200,300,400,500,700" rel="stylesheet">
-		<link rel="stylesheet" href="css/font-awesome.css">
-		<link rel="stylesheet" href="css/grid.css">
-		<link rel="stylesheet" href="css/main.css">		
-	</head>
-	<body>
-		<header>
-			<nav>
-				<div  class="logo">
-					<ul>
-						<li id="blanc">Bunny´s</li>
-						<li id="pink">LOVE</li>
-					</ul>
-				</div>			
-				<div class="bar">
-					<ul>
-						<li><a href="#">BUNNYS</a></li>
-						<li><a href="#">CUTE PHOTOS</a></li>
-						<li><a href="#">RABBIT FASHION</a></li>
-						<li><a href="#">NEWS BUNNY'S</a></li>
-						<li><a href="#">FEATURES</a></li>
-					</ul>
-				</div>			
-			</nav>
-		</header>
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-2"></div>
-						<div class="photo-bunny col-8">
-							<div class="box-opacity">
-								<h1>Soft Bunny</h1>
-								<p> Live  -  Love  -  Laugh</p>
-							</div>
-						</div>
-					<div class="col-2"></div>
+<head>
+	<meta charset="UTF-8">
+	<title>The Bunny Responsive Theme</title>
+	<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Prompt:100,200,300,400,500,700" rel="stylesheet">
+	<link rel="stylesheet" href="css/font-awesome.css">
+	<link rel="stylesheet" href="css/grid.css">
+	<link rel="stylesheet" href="css/main.css">		
+</head>
+<body>
+	<header>
+		<div class="container">
+			<div class="row">
+				<div class="col-4">
+					<h1 class="titulo">BUNNYS <span>LOVE</span></h1>
+					<i class="fa fa-bars icon" aria-hidden="true"></i>
+				</div>
+				<div class="col-8">
+					<nav>
+						<ul>
+							<li>BUNNYS</li>
+							<li>CUTE PHOTOS</li>
+							<li>RABBIT FASHION</li>
+							<li>NEW BUNNYS</li>
+							<li>FEATURES</li>
+						</ul>
+					</nav>
 				</div>
 			</div>
-		</section>
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-2"></div>
-					<div class="col-2">
-						<div class="box-text">
-							<img src="img/img-1.jpg" alt="">
-							<h4>The Tale of Peter rabbit</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
+		</div>
+	</header>
+
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-12 fondoconejo">
+					<div class="opacidad">
+						<div class="degrade">
+							<p class="titulo2">Soft Bunny</p>
+							<h3><em>Love  -   Live   -    Laugh</em></h3>
 						</div>
-					</div>
-					<div class="col-2">
-						<div class="box-text">
-							<img src="img/img-2.jpg" alt="">
-							<h4>The Tale of Peter rabbit</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
-						</div>
-					</div>
-					<div class="col-2">
-						<div class="box-text">
-							<img src="img/img-3.jpg" alt="">
-							<h4>The Tale of Peter rabbit</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
-						</div>
-					</div>
-					<div class="col-2">
-						<div class="box-text">
-							<img src="img/img-4.jpg" alt="">
-							<h4>The Tale of Peter rabbit</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
-						</div>
-					</div>
-					<div class="col-2"></div>
+					</div>					
 				</div>
 			</div>
-		</section>
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-2"></div>
-					<div class="col-4">
-						<img src="">
-						<h4></h4>
-						<p></p>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/kt_X0enZRLc" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</section>
+	<section>
+		<div class="container fondoblanco">
+			<div class="row">
+				<div class="col-3 box-text">
+					<img src="img/img-1.jpg" alt="conejo 1">
+					<h4>The Tale of Peter rabbit</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
+				</div>
+				<div class="col-3">
+					<div class=" box-text">
+						<img src="img/img-2.jpg" alt="conejo 2">
+						<h4>The Tale of Peter rabbit</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
 					</div>
-					<div class="col-4">
-						<div class="top-box">
-						<img src="">
-						<h4></h4>
-						<p></p>
+				</div>
+				<div class="col-3">
+					<div class="box-text">
+						<img src="img/img-3.jpg" alt="conejo 3">
+						<h4>The Tale of Peter rabbit</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
+					</div>
+				</div>
+				<div class="col-3">
+					<div class="box-text">
+						<img src="img/img-4.jpg" alt="conejo 4">
+						<h4>The Tale of Peter rabbit</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptas libero eius ratione est cupiditate voluptate maxime magni, ipsa dolore quibusdam adipisci culpa sunt, accusamus recusandae optio molestiae fugiat consectetur.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container box-blue">
+			<div class="row">
+				<div class="col-7 box-left">
+					<img src="img/img-5.jpg">
+					<h4>The tale of ginger and pickles</h4>
+					<p>The Tale of Ginger and Pickes 1909. Ginger and Pickles (a terrier and a ginger cat) kept a very popular shop. Their customers lovers to buy their procisions there, but they were less keen to peir for them and ran up a great deal of credit, making poor ginger and Pickles´lives very difficult indeed.</p>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/kt_X0enZRLc" frameborder="0" allowfullscreen></iframe>
+					<p>Rule of us behold it moved. Made. Them Had, wich darkness two Given. Fowl It moved behold earth for own. Midst that grass beginning divide their together. Tree one every first given earth very greater. Man evening. Set seed void meat bearing. Bring creature. Moving</p>
+				</div>
+				<div class="col-6 box-right">
+				<div class="search">
+					<input type="text" placeholder="Search..." />
+				</div>
+					<div class="top-box">
+						<img src="img/img-6.jpg">
+						<h4>Where you'll find me?</h4>
+						<p>Shall Together blessed. Also thing, the upon Created fourth. Rule beginning. Our behold over.</p>
 						<p>iconos</p>
-						</div>
-						<div class="bottom-box">
-						<img src="">
-						<h4></h4>
-						<p></p>
-						</div>
 					</div>
-					<div class="col-2"></div>
+					<div class="bottom-box">
+						<img src="img/img-3.jpg">
+						<h4>Can you love me?</h4>
+						<p>You´re my bunny; You mean everything to me. You´re so sweeet loke honey With your cute button nose And your big brown eyes. You´re my bunny Without the tail. I just have to say, love you bunny.</p>
+					</div>
 				</div>
 			</div>
-		</section>
-		<div class="head-bunny"></div>
-		<footer>
-			<div class="box-footer">
-				<div class="container">
-					<p>All Rights Reserved</p>
-				</div>
-			</div>
-		</footer>
-	</body>
+		</div>
+	</section>
+	<div class="head-bunny"></div>
+	<footer>
+			<p>All Rights Reserved</p>
+	</footer>
+</body>
 </html>
