se-hizo la section de las imagenes y el video

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="bottom-box">
 						<img src="img/img-3.jpg">
 						<h4>Can you love me?</h4>
-						<p>You´re my bunny; You mean everything to me. You´re so sweeet loke honey With your cute button nose And your big brown eyes. You´re my bunny Without the tail. I just have to say, love you bunny.</p>
+						<p>You´re my bunny; You mean everything to me. You´re so sweeet loke honey With your cute button nose And your big brown eyes. You´re my bunny Without the tail. I just have to say, love you bunny</p>
 					</div>
 				</div>
 			</div>
