reponsive pero falta detalle derecho en box-blue

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 				<div class="col-8">
 					<nav>
 						<ul>
-							<li>BUNNYS</li>
-							<li>CUTE PHOTOS</li>
-							<li>RABBIT FASHION</li>
-							<li>NEW BUNNYS</li>
-							<li>FEATURES</li>
+							<li><a href="#">BUNNYS</a></li>
+							<li><a href="#">CUTE PHOTOS</a></li>
+							<li><a href="#">RABBIT FASHION</a></li>
+							<li><a href="#">NEW BUNNYS</a></li>
+							<li><a href="#">FEATURES</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -87,8 +87,9 @@
 					<p>The Tale of Ginger and Pickes 1909. Ginger and Pickles (a terrier and a ginger cat) kept a very popular shop. Their customers lovers to buy their procisions there, but they were less keen to peir for them and ran up a great deal of credit, making poor ginger and Pickles´lives very difficult indeed.</p>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/kt_X0enZRLc" frameborder="0" allowfullscreen></iframe>
 					<p>Rule of us behold it moved. Made. Them Had, wich darkness two Given. Fowl It moved behold earth for own. Midst that grass beginning divide their together. Tree one every first given earth very greater. Man evening. Set seed void meat bearing. Bring creature. Moving</p>
+
 				</div>
-				<div class="col-6 box-right">
+				<div class="col-5 box-right">
 				<div class="search">
 					<input type="text" placeholder="Search..." />
 				</div>
@@ -96,7 +97,10 @@
 						<img src="img/img-6.jpg">
 						<h4>Where you'll find me?</h4>
 						<p>Shall Together blessed. Also thing, the upon Created fourth. Rule beginning. Our behold over.</p>
-						<p>iconos</p>
+						<i class="fa fa-facebook-official face" aria-hidden="true"></i>
+						<i class="fa fa-instagram insta" aria-hidden="true"></i>
+						<i class="fa fa-twitter twitter" aria-hidden="true"></i>
+						<i class="fa fa-youtube youtube" aria-hidden="true"></i>
 					</div>
 					<div class="bottom-box">
 						<img src="img/img-3.jpg">
@@ -107,7 +111,10 @@
 			</div>
 		</div>
 	</section>
-	<div class="head-bunny"></div>
+	<div class="row ">
+		<div class="col-12 head-bunny">	
+		</div>
+	</div>
 	<footer>
 			<p>All Rights Reserved</p>
 	</footer>
